Implemented /words/findByName
